--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -313,8 +313,11 @@
 .pendragon .tab.combat .wounds thead > tr :nth-child(1) {
   width: 30px;
 }
-.pendragon .tab.history table {
-  margin: 14px 0;
+.pendragon .tab.history .events {
+  grid-template-columns: max-content 1fr repeat(2, max-content);
+}
+.pendragon .tab.history .events span:nth-of-type(2) {
+  max-width: 100%;
 }
 .pendragon .tab.history .passive-glory {
   grid-template-columns: min-content 28px;
