--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -49,7 +49,8 @@
     grid-template-columns: subgrid;
     grid-column-start: 1;
     grid-column-end: -1;
-    .pen-grid();
+    display: grid;
+    justify-items: center;
   }
 
   .pen-grid {
