--- a/templates/actors/partials/knightly-events.hbs
+++ b/templates/actors/partials/knightly-events.hbs
@@ -1,4 +1,4 @@
-<div class="flex-list">
+<div class="flex-list pen-container">
     {{#each actor.system.history.knightly}}
     <span>
         <label>{{localize (concat "PENDRAGON." (capital @key))}}</label>
