--- a/templates/actors/tabs/history-tab.hbs
+++ b/templates/actors/tabs/history-tab.hbs
@@ -7,8 +7,10 @@
         </h2>
         {{> "systems/pendragon6/templates/actors/partials/events.hbs"}}
     </section>
-    {{!-- Knightly Events --}}
-    {{> "systems/pendragon6/templates/actors/partials/knightly-events.hbs"}}
-    {{!-- Passive Glory --}}
-    {{> "systems/pendragon6/templates/actors/partials/passive-glory.hbs"}}
+    <footer class="flex-container">
+        {{!-- Passive Glory --}}
+        {{> "systems/pendragon6/templates/actors/partials/passive-glory.hbs"}}
+        {{!-- Knightly Events --}}
+        {{> "systems/pendragon6/templates/actors/partials/knightly-events.hbs"}}
+    </footer>
 </div>
